// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Qvain.Files handleSubmit submits data correctly 1`] = `
Object {
  "accessType": Object {
    "name": Object {
      "en": "Open",
      "fi": "Avoin",
      "und": "Avoin",
    },
    "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
  },
  "actors": Array [
    Object {
      "organizations": Array [
        Object {
          "email": undefined,
          "identifier": "http://uri.suomi.fi/codelist/fairdata/organization/code/123456789",
          "name": Object {
            "en": "Org",
            "fi": "Org",
            "und": "Org",
          },
        },
      ],
      "person": undefined,
      "roles": Array [
        "creator",
      ],
      "type": "organization",
    },
  ],
  "cumulativeState": 0,
  "dataCatalog": "urn:nbn:fi:att:data-catalog-ida",
  "description": Object {
    "en": "",
    "fi": "Description",
  },
  "directories": Array [
    Object {
      "description": "Folder",
      "identifier": "11f69846228a375baf7ef919c04629c6",
      "projectIdentifier": "project",
      "title": "set1",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
  ],
  "embargoDate": undefined,
  "fieldOfScience": Array [],
  "files": Array [
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "8d66b5bc-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "info.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "8b8ae8bc-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "stuff.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "94044e70-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "file1.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "Explicitly added file",
      "fileType": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/file_type/code/text",
      },
      "identifier": "c8535f22-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "changed_title",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/documentation",
      },
    },
  ],
  "identifiers": Array [],
  "keywords": Array [
    "keyword",
  ],
  "license": Object {
    "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
    "name": Object {
      "en": "Creative Commons Attribution 4.0 International (CC BY 4.0)",
    },
  },
  "otherLicenseUrl": undefined,
  "remote_resources": Array [],
  "restrictionGrounds": undefined,
  "title": Object {
    "en": "",
    "fi": "Title",
  },
}
`;

exports[`Qvain.Files handleSubmit submits data correctly after adding directory 1`] = `
Object {
  "accessType": Object {
    "name": Object {
      "en": "Open",
      "fi": "Avoin",
      "und": "Avoin",
    },
    "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
  },
  "actors": Array [
    Object {
      "organizations": Array [
        Object {
          "email": undefined,
          "identifier": "http://uri.suomi.fi/codelist/fairdata/organization/code/123456789",
          "name": Object {
            "en": "Org",
            "fi": "Org",
            "und": "Org",
          },
        },
      ],
      "person": undefined,
      "roles": Array [
        "creator",
      ],
      "type": "organization",
    },
  ],
  "cumulativeState": 0,
  "dataCatalog": "urn:nbn:fi:att:data-catalog-ida",
  "description": Object {
    "en": "",
    "fi": "Description",
  },
  "directories": Array [
    Object {
      "description": "Folder",
      "identifier": "11f69846228a375baf7ef919c04629c6",
      "projectIdentifier": "project",
      "title": "set1",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "Folder",
      "identifier": "84189dbab05c39d09e01fb4aff0aee73",
      "projectIdentifier": "project",
      "title": "set2",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
  ],
  "embargoDate": undefined,
  "fieldOfScience": Array [],
  "files": Array [
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "8d66b5bc-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "info.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "8b8ae8bc-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "stuff.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "94044e70-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "file1.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "Explicitly added file",
      "fileType": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/file_type/code/text",
      },
      "identifier": "c8535f22-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "changed_title",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/documentation",
      },
    },
  ],
  "identifiers": Array [],
  "keywords": Array [
    "keyword",
  ],
  "license": Object {
    "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
    "name": Object {
      "en": "Creative Commons Attribution 4.0 International (CC BY 4.0)",
    },
  },
  "otherLicenseUrl": undefined,
  "remote_resources": Array [],
  "restrictionGrounds": undefined,
  "title": Object {
    "en": "",
    "fi": "Title",
  },
}
`;

exports[`Qvain.Files handleSubmit submits data correctly after adding file 1`] = `
Object {
  "accessType": Object {
    "name": Object {
      "en": "Open",
      "fi": "Avoin",
      "und": "Avoin",
    },
    "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
  },
  "actors": Array [
    Object {
      "organizations": Array [
        Object {
          "email": undefined,
          "identifier": "http://uri.suomi.fi/codelist/fairdata/organization/code/123456789",
          "name": Object {
            "en": "Org",
            "fi": "Org",
            "und": "Org",
          },
        },
      ],
      "person": undefined,
      "roles": Array [
        "creator",
      ],
      "type": "organization",
    },
  ],
  "cumulativeState": 0,
  "dataCatalog": "urn:nbn:fi:att:data-catalog-ida",
  "description": Object {
    "en": "",
    "fi": "Description",
  },
  "directories": Array [
    Object {
      "description": "Folder",
      "identifier": "11f69846228a375baf7ef919c04629c6",
      "projectIdentifier": "project",
      "title": "set1",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
  ],
  "embargoDate": undefined,
  "fieldOfScience": Array [],
  "files": Array [
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "8d66b5bc-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "info.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "8b8ae8bc-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "stuff.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "94044e70-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "file1.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "Explicitly added file",
      "fileType": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/file_type/code/text",
      },
      "identifier": "c8535f22-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "changed_title",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/documentation",
      },
    },
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "94d0ca7c-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "file2.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
  ],
  "identifiers": Array [],
  "keywords": Array [
    "keyword",
  ],
  "license": Object {
    "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
    "name": Object {
      "en": "Creative Commons Attribution 4.0 International (CC BY 4.0)",
    },
  },
  "otherLicenseUrl": undefined,
  "remote_resources": Array [],
  "restrictionGrounds": undefined,
  "title": Object {
    "en": "",
    "fi": "Title",
  },
}
`;

exports[`Qvain.Files handleSubmit submits data correctly after removing directory 1`] = `
Object {
  "accessType": Object {
    "name": Object {
      "en": "Open",
      "fi": "Avoin",
      "und": "Avoin",
    },
    "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
  },
  "actors": Array [
    Object {
      "organizations": Array [
        Object {
          "email": undefined,
          "identifier": "http://uri.suomi.fi/codelist/fairdata/organization/code/123456789",
          "name": Object {
            "en": "Org",
            "fi": "Org",
            "und": "Org",
          },
        },
      ],
      "person": undefined,
      "roles": Array [
        "creator",
      ],
      "type": "organization",
    },
  ],
  "cumulativeState": 0,
  "dataCatalog": "urn:nbn:fi:att:data-catalog-ida",
  "description": Object {
    "en": "",
    "fi": "Description",
  },
  "directories": Array [],
  "embargoDate": undefined,
  "fieldOfScience": Array [],
  "files": Array [
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "8d66b5bc-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "info.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "8b8ae8bc-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "stuff.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "94044e70-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "file1.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "Explicitly added file",
      "fileType": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/file_type/code/text",
      },
      "identifier": "c8535f22-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "changed_title",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/documentation",
      },
    },
  ],
  "identifiers": Array [],
  "keywords": Array [
    "keyword",
  ],
  "license": Object {
    "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
    "name": Object {
      "en": "Creative Commons Attribution 4.0 International (CC BY 4.0)",
    },
  },
  "otherLicenseUrl": undefined,
  "remote_resources": Array [],
  "restrictionGrounds": undefined,
  "title": Object {
    "en": "",
    "fi": "Title",
  },
}
`;

exports[`Qvain.Files handleSubmit submits data correctly after removing file 1`] = `
Object {
  "accessType": Object {
    "name": Object {
      "en": "Open",
      "fi": "Avoin",
      "und": "Avoin",
    },
    "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
  },
  "actors": Array [
    Object {
      "organizations": Array [
        Object {
          "email": undefined,
          "identifier": "http://uri.suomi.fi/codelist/fairdata/organization/code/123456789",
          "name": Object {
            "en": "Org",
            "fi": "Org",
            "und": "Org",
          },
        },
      ],
      "person": undefined,
      "roles": Array [
        "creator",
      ],
      "type": "organization",
    },
  ],
  "cumulativeState": 0,
  "dataCatalog": "urn:nbn:fi:att:data-catalog-ida",
  "description": Object {
    "en": "",
    "fi": "Description",
  },
  "directories": Array [
    Object {
      "description": "Folder",
      "identifier": "11f69846228a375baf7ef919c04629c6",
      "projectIdentifier": "project",
      "title": "set1",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
  ],
  "embargoDate": undefined,
  "fieldOfScience": Array [],
  "files": Array [
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "8b8ae8bc-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "stuff.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "File",
      "fileType": undefined,
      "identifier": "94044e70-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "file1.csv",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/outcome",
      },
    },
    Object {
      "description": "Explicitly added file",
      "fileType": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/file_type/code/text",
      },
      "identifier": "c8535f22-5d32-11ea-b9f7-94e6f76907f8",
      "projectIdentifier": "project",
      "title": "changed_title",
      "useCategory": Object {
        "identifier": "http://uri.suomi.fi/codelist/fairdata/use_category/code/documentation",
      },
    },
  ],
  "identifiers": Array [],
  "keywords": Array [
    "keyword",
  ],
  "license": Object {
    "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
    "name": Object {
      "en": "Creative Commons Attribution 4.0 International (CC BY 4.0)",
    },
  },
  "otherLicenseUrl": undefined,
  "remote_resources": Array [],
  "restrictionGrounds": undefined,
  "title": Object {
    "en": "",
    "fi": "Title",
  },
}
`;
